kubernetes/yaml/updatead/mysql.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: mysql
  namespace: production
  labels:
    app: mysql
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate  
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      hostname: mysql
      containers:
      - name: mysql 
        image: mysql:5.7 
        imagePullPolicy: Always
        resources:
          limits:
            memory: 2Gi
            cpu: "2"
          requests:
            memory: 2Gi
            cpu: "1"
      nodeSelector:
        app: prod
