kubernetes/yaml/updatead/updatead.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: updatead
  namespace: production
  labels:
    app: updatead
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate  
  selector:
    matchLabels:
      app: updatead
  template:
    metadata:
      labels:
        app: updatead
    spec:
      hostname: updatead
      containers:
      - name: updatead
        image: hebersonaguiar/updatead:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 2Gi
            cpu: "2"
          requests:
            memory: 2Gi
            cpu: "1"
        securityContext:
          privileged: true
      nodeSelector:
        app: prod
