kubernetes/yaml/updatead/svc-clusterip-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
  - port: 33306
    targetPort: 3306
    protocol: TCP
    nodePort: 0
