kubernetes/yaml/updatead/svc-upatead.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: updatead
  name: updatead
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: updatead
