kubernetes/yaml/updatead/svc-upateadcontrol.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: updateadcontrol
  name: updateadcontrol
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: updateadcontrol
